load("//factory/bazel:defs.bzl", "LOCAL_TAGS", "MANUAL_LOCAL_TAGS")
load("//factory/bazel:sdk_generation.bzl", "sdk_generation_tree")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sdk_generation_common_inputs",
    srcs = [
        "//tools/dev/scripts:sdk_generation_scripts",
        "//:oagen_generation_inputs",
    ],
)

SDK_CLIENT_INPUT_EXCLUDES = [
    "clients/*/.bundle/**",
    "clients/*/.gradle/**",
    "clients/*/.phpunit.cache/**",
    "clients/*/.ruff_cache/**",
    "clients/*/.pytest_cache/**",
    "clients/*/__pycache__/**",
    "clients/*/artifacts/**",
    "clients/*/bin/**",
    "clients/*/build/**",
    "clients/*/dist/**",
    "clients/*/node_modules/**",
    "clients/*/nupkg/**",
    "clients/*/obj/**",
    "clients/*/retab.egg-info/**",
    "clients/*/target/**",
    "clients/*/test_venv/**",
    "clients/*/vendor/**",
]

filegroup(
    name = "workflow_fingerprint_contract_sources",
    srcs = glob(
        [
            "clients/**/*.cs",
            "clients/**/*.go",
            "clients/**/*.java",
            "clients/**/*.json",
            "clients/**/*.php",
            "clients/**/*.py",
            "clients/**/*.rb",
            "clients/**/*.rs",
            "clients/**/*.ts",
        ],
        exclude = SDK_CLIENT_INPUT_EXCLUDES,
    ),
)

SDK_LANGUAGE_SPECS = [
    {
        "language": "python",
        "target": "snippet_python_sdk",
    },
    {
        "language": "node",
        "target": "snippet_node_sdk",
    },
    {
        "language": "go",
        "target": "snippet_go_sdk",
    },
    {
        "language": "rust",
        "target": "snippet_rust_sdk",
    },
    {
        "language": "dotnet",
        "target": "snippet_dotnet_sdk",
    },
    {
        "language": "php",
        "target": "snippet_php_sdk",
    },
    {
        "language": "ruby",
        "target": "snippet_ruby_sdk",
    },
    {
        "language": "java",
        "target": "snippet_java_sdk",
    },
]

[
    filegroup(
        name = "%s_sdk_seed_inputs" % spec["language"],
        srcs = glob(
            ["clients/%s/**" % spec["language"]],
            exclude = SDK_CLIENT_INPUT_EXCLUDES,
        ),
    )
    for spec in SDK_LANGUAGE_SPECS
]

filegroup(
    name = "generation_inputs",
    srcs = glob(
        ["clients/**"],
        exclude = SDK_CLIENT_INPUT_EXCLUDES,
    ) + [
        ":sdk_generation_common_inputs",
        "//public/sdk/cli:sources",
    ],
)

# Fully hermetic Python SDK drift check (blueprint Phase 4, Python; mirrors
# check_node): runs SANDBOXED with no network and is cached on no-op reruns. Both
# inputs are Bazel-declared TreeArtifacts:
#   * generated_python_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with the
#     lockfile-pinned, vendored ruff 0.15.13 binary via
#     //factory/bazel/ruff_sdk_tree (line-length 180, target-version py312,
#     --isolated -- the committed pyproject.toml [tool.ruff] config).
#   * committed_python_sdk_tree -- the committed retab/resources/** +
#     retab/types/** generated .py files + manifest staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_python",
    srcs = ["//factory/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "python",
        "$(location //public/sdk/clients/python:generated_python_sdk_formatted)",
        "$(location //public/sdk/clients/python:committed_python_sdk_tree)",
    ],
    data = [
        "//public/sdk/clients/python:committed_python_sdk_tree",
        "//public/sdk/clients/python:generated_python_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Node SDK drift check (blueprint Phase 4, gold standard): runs
# SANDBOXED with no network and does not read the live working tree. The test
# formats the raw generated tree inside its own action before diffing against the
# committed src/ + manifest snapshot, so a stale cached formatted intermediate
# cannot make the freshness gate flaky.
sh_test(
    name = "check_node",
    srcs = ["//factory/bazel:diff_node_sdk_tree.sh"],
    args = [
        "$(location //factory/generators/oagen/retab-gen:generated_node_sdk_raw)",
        "$(location //public/sdk/clients/node:committed_node_sdk_tree)",
        "$(location //public/sdk/clients/node:format_generated_node_sdk_bin)",
        "$(location //public/sdk/clients/node:.prettierrc)",
        "$(location //factory/bazel:diff_generated_sdk_tree.sh)",
    ],
    data = [
        "//factory/generators/oagen/retab-gen:generated_node_sdk_raw",
        "//public/sdk/clients/node:committed_node_sdk_tree",
        "//public/sdk/clients/node:format_generated_node_sdk_bin",
        "//public/sdk/clients/node:.prettierrc",
        "//factory/bazel:diff_generated_sdk_tree.sh",
    ],
    env = {
        "RETAB_NODE_SDK_CHECK_VERSION": "3",
    },
    tags = ["generated-check", "no-cache"],
)

sdk_generation_tree(
    name = "generated_python_sdk",
    language = "python",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_node_sdk",
    language = "node",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = LOCAL_TAGS + ["generated-artifact"],
)

# Fully hermetic Go SDK drift check (blueprint Phase 4, Go): mirrors check_node.
# Runs SANDBOXED with no network and is cached on no-op reruns. Both inputs are
# Bazel-declared TreeArtifacts:
#   * generated_go_sdk_formatted -- the raw generator output (sandboxed, from the
#     committed OpenAPI contract on the pinned Node toolchain via the lockfile-
#     materialized oagen_npm closure) re-formatted with //factory/bazel/gofmt_sdk_tree
#     (a rules_go go_binary running the gofmt engine on the pinned Go toolchain).
#   * committed_go_sdk_tree -- the committed non-test root *.go + go.mod + manifest
#     staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_go",
    srcs = ["//factory/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "go",
        "$(location :generated_go_sdk)",
        "$(location //public/sdk/clients/go:committed_go_sdk_tree)",
    ],
    data = [
        "//public/sdk/clients/go:committed_go_sdk_tree",
        ":generated_go_sdk",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Rust SDK drift check (blueprint Phase 4, Rust): mirrors
# check_go/check_node. Runs SANDBOXED with no network and is cached on no-op
# reruns. Both inputs are Bazel-declared TreeArtifacts:
#   * generated_rust_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with the pinned,
#     vendored rustfmt binary via //factory/bazel/rustfmt_sdk_tree (the rustc
#     runtime libs travel with it; the format script points the dynamic loader
#     at their dir). Scoped to src/** + manifest (Node parity).
#   * committed_rust_sdk_tree -- the committed src/**/*.rs + manifest staged into
#     a tree. The hand-bumped Cargo.toml/Cargo.lock, LICENSE, README and the
#     hand-written tests/ are NOT generated and are excluded.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_rust",
    srcs = ["//factory/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "rust",
        "$(location //public/sdk/clients/rust:generated_rust_sdk_formatted)",
        "$(location //public/sdk/clients/rust:committed_rust_sdk_tree)",
    ],
    data = [
        "//public/sdk/clients/rust:committed_rust_sdk_tree",
        "//public/sdk/clients/rust:generated_rust_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic .NET SDK drift check (blueprint Phase 4, gold standard): runs
# SANDBOXED with no network and is cached on no-op reruns. Both inputs are
# Bazel-declared TreeArtifacts:
#   * generated_dotnet_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure), scoped to src/ + manifest. The
#     dotnet emitter already emits correctly-formatted C#, so unlike Node/Go/Java
#     there is NO downstream formatter step and NO .NET SDK toolchain.
#   * committed_dotnet_sdk_tree -- the committed src/ + manifest staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp). The release Version in Retab.csproj and the
# hand-extended tests/ are intentionally out of scope (Node parity excludes
# package.json + tests). The retab-dotnet-oagen-emitter service boundary selects
# this target for real regenerate-and-diff drift coverage instead of the
# //factory/api-quality:unit_tests proxy.
sh_test(
    name = "check_dotnet",
    srcs = ["//factory/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "dotnet",
        "$(location //public/sdk/clients/dotnet:generated_dotnet_sdk_formatted)",
        "$(location //public/sdk/clients/dotnet:committed_dotnet_sdk_tree)",
    ],
    data = [
        "//public/sdk/clients/dotnet:committed_dotnet_sdk_tree",
        "//public/sdk/clients/dotnet:generated_dotnet_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic PHP SDK drift check (blueprint Phase 4, PHP; mirrors check_node):
# runs SANDBOXED with no network and is cached on no-op reruns. Both inputs are
# Bazel-declared TreeArtifacts:
#   * generated_php_sdk_formatted -- the raw generator output (sandboxed, from the
#     committed OpenAPI contract on the pinned Node toolchain via the lockfile-
#     materialized oagen_npm closure) re-formatted with //factory/bazel/php_cs_fixer_sdk_tree
#     (the vendored, pinned static PHP 8.5.6 CLI running php-cs-fixer 3.95.2),
#     scoped to the generated lib/ + tests/ + manifest set.
#   * committed_php_sdk_tree -- the committed generated lib/ + tests/ + manifest
#     staged into a tree (hand-maintained runtime/test helpers, composer.*,
#     phpstan/phpunit config, .php-cs-fixer.dist.php, README/LICENSE excluded).
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT. The retab-php-oagen-emitter service
# boundary selects this target for real regenerate-and-diff drift coverage instead
# of the //factory/api-quality:unit_tests proxy.
sh_test(
    name = "check_php",
    srcs = ["//factory/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "php",
        "$(location :generated_php_sdk)",
        "$(location //public/sdk/clients/php:committed_php_sdk_tree)",
    ],
    data = [
        "//public/sdk/clients/php:committed_php_sdk_tree",
        ":generated_php_sdk",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Ruby SDK drift check (blueprint Phase 4, gold standard; mirrors
# check_node): runs SANDBOXED with no network and is cached on no-op reruns. Both
# inputs are Bazel-declared TreeArtifacts:
#   * generated_ruby_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with the vendored,
#     lockfile-pinned rubyfmt binary (//factory/bazel/rubyfmt_sdk_tree:rubyfmt).
#   * committed_ruby_sdk_tree -- the committed lib/ + rbi/ + generated test/ +
#     Gemfile + retab.gemspec + manifest staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. The
# retab-ruby-oagen-emitter service boundary selects this target for real
# regenerate-and-diff drift coverage, instead of the //factory/api-quality:unit_tests
# proxy other (still-manual) languages use.
sh_test(
    name = "check_ruby",
    srcs = ["//factory/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "ruby",
        "$(location //public/sdk/clients/ruby:generated_ruby_sdk_formatted)",
        "$(location //public/sdk/clients/ruby:committed_ruby_sdk_tree)",
    ],
    data = [
        "//public/sdk/clients/ruby:committed_ruby_sdk_tree",
        "//public/sdk/clients/ruby:generated_ruby_sdk_formatted",
    ],
    tags = ["generated-check"],
)

# Fully hermetic Java SDK drift check (blueprint Phase 4, Java; mirrors
# check_node): runs SANDBOXED with no network and is cached on no-op reruns. Both
# inputs are Bazel-declared TreeArtifacts:
#   * generated_java_sdk_formatted -- the raw generator output (sandboxed, from
#     the committed OpenAPI contract on the pinned Node toolchain via the
#     lockfile-materialized oagen_npm closure) re-formatted with google-java-format
#     1.35.0 (the Spotless engine, pinned via http_file) run under Bazel's hermetic
#     JDK toolchain.
#   * committed_java_sdk_tree -- the committed src/ + build/config files + manifest
#     staged into a tree.
# diff_generated_sdk_tree.sh compares the two inside the sandbox (normalizing the
# manifest generatedAt timestamp), so nothing reaches the live working tree. This
# replaces the old LOCAL/no-sandbox check that regenerated on the host and read
# the committed tree via RETAB_REPO_ROOT.
sh_test(
    name = "check_java",
    srcs = ["//factory/bazel:diff_generated_sdk_tree.sh"],
    args = [
        "java",
        "$(location //public/sdk/clients/java:generated_java_sdk_formatted)",
        "$(location //public/sdk/clients/java:committed_java_sdk_tree)",
    ],
    data = [
        "//public/sdk/clients/java:committed_java_sdk_tree",
        "//public/sdk/clients/java:generated_java_sdk_formatted",
    ],
    tags = ["generated-check"],
)

sdk_generation_tree(
    name = "generated_go_sdk",
    language = "go",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_rust_sdk",
    language = "rust",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_dotnet_sdk",
    language = "dotnet",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_php_sdk",
    language = "php",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_ruby_sdk",
    language = "ruby",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

sdk_generation_tree(
    name = "generated_java_sdk",
    language = "java",
    openapi = "//public/docs/api-reference:openapi_json",
    srcs = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-artifact"],
)

[
    sdk_generation_tree(
        name = spec["target"],
        language = spec["language"],
        # Snippet lint is downstream of SDK trees generated from the same public
        # OpenAPI artifact as the checked SDKs. This keeps docs examples on the
        # Go routes -> public OpenAPI -> SDK -> snippet-lint chain.
        openapi = "//public/docs/api-reference:openapi_json",
        srcs = [
            ":sdk_generation_common_inputs",
            ":%s_sdk_seed_inputs" % spec["language"],
        ],
        format = False,
        tags = MANUAL_LOCAL_TAGS + ["generated-artifact", "snippet-sdk"],
    )
    for spec in SDK_LANGUAGE_SPECS
]

SDK_UPDATE_SPECS = [
    {
        "check": ":check_python",
        "client": "public/sdk/clients/python",
        "generated": "//public/sdk/clients/python:generated_python_sdk_formatted",
        "language": "python",
        "snippet": "//public/docs:snippet_lint_python",
    },
    {
        "check": ":check_node",
        "client": "public/sdk/clients/node",
        "generated": "//public/sdk/clients/node:generated_node_sdk_formatted",
        "language": "node",
        "snippet": "//public/docs:snippet_lint_typescript",
    },
    {
        "check": ":check_go",
        "client": "public/sdk/clients/go",
        "generated": ":generated_go_sdk",
        "language": "go",
        "snippet": "//public/docs:snippet_lint_go",
    },
    {
        "check": ":check_rust",
        "client": "public/sdk/clients/rust",
        "generated": ":generated_rust_sdk",
        "language": "rust",
        "snippet": "//public/docs:snippet_lint_rust",
    },
    {
        "check": ":check_dotnet",
        "client": "public/sdk/clients/dotnet",
        "generated": ":generated_dotnet_sdk",
        "language": "dotnet",
        "snippet": "//public/docs:snippet_lint_dotnet",
    },
    {
        "check": ":check_php",
        "client": "public/sdk/clients/php",
        "generated": ":generated_php_sdk",
        "language": "php",
        "snippet": "//public/docs:snippet_lint_php",
    },
    {
        "check": ":check_ruby",
        "client": "public/sdk/clients/ruby",
        "generated": "//public/sdk/clients/ruby:generated_ruby_sdk_formatted",
        "language": "ruby",
        "snippet": "//public/docs:snippet_lint_ruby",
    },
    {
        "check": ":check_java",
        "client": "public/sdk/clients/java",
        "generated": "//public/sdk/clients/java:generated_java_sdk_formatted",
        "language": "java",
        "snippet": "//public/docs:snippet_lint_java",
    },
]

[
    sh_binary(
        name = "generated_%s_sdk_update" % spec["language"],
        srcs = ["//factory/bazel:update_generated_sdk_tree.sh"],
        args = [
            spec["language"],
            "$(location %s)" % spec["generated"],
            spec["client"],
            "//public/sdk:check_%s" % spec["language"],
            spec["snippet"],
        ],
        data = [
            spec["generated"],
            ":generation_inputs",
        ],
        tags = MANUAL_LOCAL_TAGS + ["generated-update"],
    )
    for spec in SDK_UPDATE_SPECS
]

sh_binary(
    name = "generated_sdks_update",
    srcs = ["//factory/bazel:update_generated_sdks.sh"],
    args = [
        "$(location //factory/bazel:update_generated_sdk_tree.sh)",
    ] + [
        item
        for spec in SDK_UPDATE_SPECS
        for item in [
            spec["language"],
            "$(location %s)" % spec["generated"],
            spec["client"],
            "//public/sdk:check_%s" % spec["language"],
            spec["snippet"],
        ]
    ],
    data = [
        "//factory/bazel:update_generated_sdk_tree.sh",
        ":generation_inputs",
    ] + [
        spec["generated"]
        for spec in SDK_UPDATE_SPECS
    ],
    tags = MANUAL_LOCAL_TAGS + ["generated-update"],
)

[
    test_suite(
        name = "generated_%s_sdk_check" % spec["language"],
        tests = [spec["check"]],
    )
    for spec in SDK_UPDATE_SPECS
]

test_suite(
    name = "generated_sdks",
    tests = [
        "//factory/bazel:oagen_core_dist_freshness",
        ":check_python",
        "//public/sdk/clients/node:format_generated_node_sdk_test",
        ":check_node",
        ":check_go",
        ":check_rust",
        ":check_dotnet",
        ":check_php",
        ":check_ruby",
        ":check_java",
    ],
)

test_suite(
    name = "generated_sdks_check",
    tests = [
        ":generated_sdks",
    ],
)

test_suite(
    name = "experimental_generated_sdks",
    tests = [],
)

test_suite(
    name = "lint",
    tests = [
        "//public/sdk/clients/node:lint",
        "//public/sdk/clients/python:lint",
    ],
)

test_suite(
    name = "format_check",
    tests = [
        "//public/sdk/clients/node:format_check",
        "//public/sdk/clients/python:format_check",
    ],
)

test_suite(
    name = "client_tests",
    tests = [
        "//public/sdk/clients/node:test",
        "//public/sdk/clients/python:test",
    ],
)

test_suite(
    name = "test_unit",
    tests = [
        ":client_tests",
    ],
)

test_suite(
    name = "typecheck",
    tests = [
        ":lint",
    ],
)

test_suite(
    name = "smoke",
    tests = [
        ":format_check",
        ":lint",
    ],
)

test_suite(
    name = "quality",
    tests = [
        ":client_tests",
        ":format_check",
        ":lint",
        ":smoke",
        ":test_unit",
        ":typecheck",
    ],
)

sh_test(
    name = "check_all",
    srcs = ["//factory/bazel:run_sdk_generation_check.sh"],
    data = [":generation_inputs"],
    tags = MANUAL_LOCAL_TAGS + ["generated-check"],
)
