package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sources",
    srcs = glob([
        "**/*.go",
        "api-overlay-inventory.json",
        "go.mod",
        "go.sum",
    ]),
)

filegroup(
    name = "api_overlay_inventory",
    srcs = ["api-overlay-inventory.json"],
)

sh_test(
    name = "api_overlay_inventory_check",
    srcs = ["//factory/bazel:run_api_surface_check.sh"],
    args = [
        "cli-overlay",
        "$(location //public/docs/api-reference:openapi_json)",
        "public/sdk/cli/api-overlay-inventory.json",
    ],
    data = [
        ":sources",
        "//public/docs/api-reference:openapi_json",
        "//factory/bazel:api_surface.py",
    ],
    tags = [
        "local",
        "no-sandbox",
        "requires-venv",
    ],
)

sh_binary(
    name = "api_overlay_inventory_update",
    srcs = ["//factory/bazel:update_checked_contract_artifact.sh"],
    args = [
        "cli-api-overlay-inventory",
        "public/sdk/cli/api-overlay-inventory.json",
        "//public/sdk/cli:api_overlay_inventory_check",
        "//public/sdk/cli:api_overlay_contract_check",
        "//:api_surface_checks",
    ],
    data = [":api_overlay_inventory"],
    tags = [
        "local",
        "manual",
        "no-sandbox",
        "requires-venv",
        "generated-update",
    ],
)

test_suite(
    name = "api_overlay_contract_check",
    tests = [
        ":api_overlay_inventory_check",
    ],
)
