package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sources",
    srcs = glob([
        "**/*.go",
        "api-overlay-inventory.json",
        "go.mod",
        "go.sum",
    ]),
)

filegroup(
    name = "api_overlay_inventory",
    srcs = ["api-overlay-inventory.json"],
)

sh_test(
    name = "api_overlay_inventory_check",
    srcs = ["//factory/bazel:run_api_surface_check.sh"],
    args = [
        "cli-overlay",
        "$(location //public/docs/api-reference:openapi_json)",
        "public/sdk/cli/api-overlay-inventory.json",
    ],
    data = [
        ":sources",
        "//public/docs/api-reference:openapi_json",
        "//factory/bazel:api_surface.py",
    ],
    tags = [
        "local",
        "no-sandbox",
        "requires-venv",
    ],
)

sh_binary(
    name = "api_overlay_inventory_update",
    srcs = ["//factory/bazel:update_checked_contract_artifact.sh"],
    args = [
        "cli-api-overlay-inventory",
        "public/sdk/cli/api-overlay-inventory.json",
        "//public/sdk/cli:api_overlay_inventory_check",
        "//public/sdk/cli:api_overlay_contract_check",
        "//:api_surface_checks",
    ],
    data = [":api_overlay_inventory"],
    tags = [
        "local",
        "manual",
        "no-sandbox",
        "requires-venv",
        "generated-update",
    ],
)

test_suite(
    name = "api_overlay_contract_check",
    tests = [
        ":api_overlay_inventory_check",
    ],
)

# The CLI vendors the workflow engine's JSON-Schema -> pydantic emitter because
# it cannot import retab_core_go across the public/sdk submodule boundary. This
# gate fails when the vendored copy drifts from core-go, which would make
# `functions hydrate` write models the engine would never build.
sh_test(
    name = "pydantic_emitter_check",
    srcs = ["//factory/bazel:check_cli_pydantic_emitter_freshness.sh"],
    data = [
        ":sources",
        "//factory/generators/cli_pymodels:vendor_pydantic_emitter",
        "//packages/core-go/workflow_engine/blocks:pydantic_emitter_sources",
    ],
    tags = [
        "local",
        "no-sandbox",
        "requires-venv",
    ],
)

sh_binary(
    name = "pydantic_emitter_update",
    srcs = ["//factory/bazel:update_cli_pydantic_emitter.sh"],
    data = [
        ":sources",
        "//factory/generators/cli_pymodels:vendor_pydantic_emitter",
        "//packages/core-go/workflow_engine/blocks:pydantic_emitter_sources",
    ],
    tags = [
        "generated-update",
        "local",
        "manual",
        "no-sandbox",
        "requires-venv",
    ],
)
