load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")

package(default_visibility = ["//visibility:public"])

# Hermetic gofmt step for the sandboxed Go SDK drift check.
#
# The generator (//.oagen-workspace/retab-gen:generated_go_sdk_raw) emits an
# UNFORMATTED root *.go + go.mod + manifest tree. gofmt is not in the generator
# closure, so this step formats that raw tree with //tools/bazel/gofmt_sdk_tree --
# a rules_go go_binary that runs go/format.Source (the exact gofmt engine) on the
# pinned, hermetic Go toolchain -- mirroring how the Node SDK reformats with its
# own vendored prettier. The generator already emits `any` (not `interface{}`),
# so plain gofmt (no -s simplify, no -r rewrites) reproduces the committed SDK.
run_binary(
    name = "generated_go_sdk_formatted",
    srcs = ["//.oagen-workspace/retab-gen:generated_go_sdk_raw"],
    args = [
        "$(execpath //.oagen-workspace/retab-gen:generated_go_sdk_raw)",
        "$@",
    ],
    out_dirs = ["generated-go-formatted"],
    tool = "//tools/bazel/gofmt_sdk_tree:gofmt_sdk_tree",
)

# Stage the committed Go SDK generated paths into a single TreeArtifact so the
# drift check can diff it against the generated tree entirely inside the sandbox,
# without reading the live working tree. The generated set is exactly the
# non-test root *.go files plus go.mod plus the manifest -- hand-written *_test.go
# files, go.sum, README.md and .golangci.yml are NOT generated and are excluded.
copy_to_directory(
    name = "committed_go_sdk_tree",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ) + [
        "go.mod",
        ".oagen-manifest.json",
    ],
    out = "committed-go-sdk-tree",
)
